--- a/src/REstate.Connectors.Chrono/packages.config
+++ b/src/REstate.Connectors.Chrono/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
-  <package id="Nancy" version="1.4.3" targetFramework="net461" />
-  <package id="Nancy.Authentication.Stateless" version="1.4.1" targetFramework="net461" />
-  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
-  <package id="Nancy.Owin" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy.Authentication.Stateless" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy.Owin" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
