--- a/src/REstate.Web.Core/packages.config
+++ b/src/REstate.Web.Core/packages.config
@@ -6,14 +6,14 @@
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net461" />
-  <package id="Nancy" version="1.4.3" targetFramework="net461" />
-  <package id="Nancy.Authentication.Stateless" version="1.4.1" targetFramework="net461" />
-  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net461" />
-  <package id="Nancy.Owin" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy.Authentication.Stateless" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy.Owin" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net45" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
-  <package id="Psibr.Platform.Nancy" version="4.0.2" targetFramework="net461" />
+  <package id="Psibr.Platform.Nancy" version="5.0.4-alpha" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Topshelf" version="4.0.1" targetFramework="net461" />
 </packages>
