--- a/src/REstate.Repositories.Chrono.Susanoo/REstate.Repositories.Chrono.Susanoo.csproj
+++ b/src/REstate.Repositories.Chrono.Susanoo/REstate.Repositories.Chrono.Susanoo.csproj
@@ -66,6 +66,10 @@
       <HintPath>..\packages\REstateClient.5.0.1\lib\net45\REstate.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="REstate.Domain.Chrono, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Domain.Chrono.1.0.1.0\lib\net45\REstate.Domain.Chrono.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="REstate.Domain.Core, Version=5.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\REstate.Domain.Core.5.0.1.0\lib\net45\REstate.Domain.Core.dll</HintPath>
       <Private>True</Private>
@@ -92,10 +96,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\REstate.Domain.Chrono\src\REstate.Domain.Chrono\REstate.Domain.Chrono.csproj">
-      <Project>{6ee10dc1-eaa1-4754-b207-d4c4b86eab9f}</Project>
-      <Name>REstate.Domain.Chrono</Name>
-    </ProjectReference>
     <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
       <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
       <Name>REstate.Platform</Name>
