--- a/src/REstate.Services.ChronoConsumer/packages.config
+++ b/src/REstate.Services.ChronoConsumer/packages.config
@@ -10,6 +10,7 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="Psibr.Platform.Logging.Serilog" version="1.0.1.0" targetFramework="net45" />
+  <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
   <package id="REstateClient" version="5.0.1" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
