--- a/src/REstate.Web.Chrono/packages.config
+++ b/src/REstate.Web.Chrono/packages.config
@@ -14,4 +14,5 @@
   <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net45" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="Psibr.Platform.Nancy" version="5.0.4-alpha" targetFramework="net461" />
+  <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
 </packages>
