--- a/src/REstate.Web.Core/packages.config
+++ b/src/REstate.Web.Core/packages.config
@@ -14,6 +14,7 @@
   <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net45" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="Psibr.Platform.Nancy" version="5.0.4-alpha" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Topshelf" version="4.0.1" targetFramework="net461" />
 </packages>
