--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,4 @@ src/REstate.Service.AdminUI/wwwroot/app/*.js
 src/REstate.Service.AdminUI/wwwroot/app/*.js.map
 /src/REstate.Service.AdminUI/wwwroot/.vscode/.browse.VC.db
 /.vscode/.browse.VC.db
+/plugins/**/
