--- a/plugins/packages.config
+++ b/plugins/packages.config
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-    <package id="Cake" version="0.5.2" />
-    <package id="NUnit.Runners" version="2.6.4" />
+    <package id="REstate.Connectors.RabbitMq" version="1.0.8" />
+    <package id="REstate.Connectors.RoslynScripting" version="1.0.3" />
+    <package id="REstate.Connectors.Susanoo" version="1.0.2" />
 </packages>
