--- a/src/REstate.Repositories.Chrono.Susanoo/packages.config
+++ b/src/REstate.Repositories.Chrono.Susanoo/packages.config
@@ -11,5 +11,6 @@
   <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
   <package id="REstateClient" version="5.0.1" targetFramework="net461" />
+  <package id="Susanoo.ConnectionPooling" version="1.0.1" targetFramework="net461" />
   <package id="Susanoo.Core" version="1.2.4.2" targetFramework="net461" />
 </packages>
