--- a/src/REstate.Services.ChronoConsumer/packages.config
+++ b/src/REstate.Services.ChronoConsumer/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
-  <package id="AutofacSerilogIntegration" version="1.0.10" targetFramework="net461" />
+  <package id="AutofacSerilogIntegration" version="1.0.12" targetFramework="net461" />
   <package id="Nancy" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Nancy.Authentication.Stateless" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
@@ -12,6 +12,7 @@
   <package id="Psibr.Platform.Logging.Serilog" version="1.0.1.0" targetFramework="net45" />
   <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
+  <package id="REstate.Platform" version="1.0.1" targetFramework="net461" />
   <package id="REstateClient" version="5.0.1" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
