--- a/src/REstate.Web.AdminUI/packages.config
+++ b/src/REstate.Web.AdminUI/packages.config
@@ -6,4 +6,6 @@
   <package id="Nancy.Owin" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
+  <package id="REstate.Platform" version="1.0.1" targetFramework="net461" />
 </packages>
