--- a/src/REstate.Web.Core/packages.config
+++ b/src/REstate.Web.Core/packages.config
@@ -3,9 +3,7 @@
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="JWT" version="1.3.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net461" />
   <package id="Nancy" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Nancy.Authentication.Stateless" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
@@ -15,6 +13,7 @@
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="Psibr.Platform.Nancy" version="5.0.4-alpha" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
+  <package id="REstate.Platform" version="1.0.1" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Topshelf" version="4.0.1" targetFramework="net461" />
 </packages>
