Nancy new Route sytnax from CI

--- a/src/REstate.Web.Auth/packages.config
+++ b/src/REstate.Web.Auth/packages.config
@@ -4,7 +4,7 @@
   <package id="JWT" version="1.3.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
-  <package id="Nancy" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy" version="2.0-Pre1728" targetFramework="net461" />
   <package id="Nancy.Authentication.Stateless" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Nancy.Owin" version="2.0.0-alpha" targetFramework="net461" />
@@ -13,5 +13,5 @@
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="Psibr.Platform.Nancy" version="5.0.4-alpha" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
-  <package id="REstate.Platform" version="1.0.1" targetFramework="net461" />
+  <package id="REstate.Platform" version="1.0.2" targetFramework="net461" />
 </packages>
