--- a/src/REstate.Services.Core/packages.config
+++ b/src/REstate.Services.Core/packages.config
@@ -6,7 +6,7 @@
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
-  <package id="Nancy" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy" version="2.0-Pre1728" targetFramework="net461" />
   <package id="Nancy.Authentication.Stateless" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
   <package id="Nancy.Owin" version="2.0.0-alpha" targetFramework="net461" />
@@ -19,7 +19,7 @@
   <package id="Psibr.Platform.Nancy.Service" version="5.0.1-alpha" targetFramework="net461" />
   <package id="Psibr.Platform.Serialization.NewtonsoftJson" version="1.0.0.0" targetFramework="net461" />
   <package id="REstate.Domain.Core" version="5.0.1.0" targetFramework="net461" />
-  <package id="REstate.Platform" version="1.0.1" targetFramework="net461" />
+  <package id="REstate.Platform" version="1.0.2" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
   <package id="Serilog.Sinks.Seq" version="1.5.36" targetFramework="net461" />
