--- a/src/REstate.Web.AdminUI/REstate.Web.AdminUI.csproj
+++ b/src/REstate.Web.AdminUI/REstate.Web.AdminUI.csproj
@@ -35,7 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Nancy, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nancy.2.0.0-alpha\lib\net45\Nancy.dll</HintPath>
+      <HintPath>..\packages\Nancy.2.0-Pre1728\lib\net45\Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Nancy.Bootstrappers.Autofac, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -58,8 +58,8 @@
       <HintPath>..\packages\REstate.Domain.Core.5.0.1.0\lib\net45\REstate.Domain.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Platform, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Platform.1.0.1\lib\net461\REstate.Platform.dll</HintPath>
+    <Reference Include="REstate.Platform, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Platform.1.0.2\lib\net461\REstate.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
