Removed legacy code and moved to a fork of stateless for the time being.

--- a/src/REstate.Database.SqlServer/REstate.Database.SqlServer.csproj
+++ b/src/REstate.Database.SqlServer/REstate.Database.SqlServer.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CreateChronoConsumerServiceAccount.cs" />
     <Compile Include="CreateDefaultAdminUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AddTriggerToInstances.cs" />
     <Compile Include="UpgradeToVersion5.cs" />
   </ItemGroup>
   <ItemGroup>
