--- a/src/REstate.Repositories.Chrono.Susanoo/packages.config
+++ b/src/REstate.Repositories.Chrono.Susanoo/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="6.0.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
   <package id="REstateClient" version="5.0.1" targetFramework="net461" />
   <package id="Susanoo.ConnectionPooling" version="1.0.1" targetFramework="net461" />
   <package id="Susanoo.Core" version="1.2.4.2" targetFramework="net461" />
