--- a/src/REstate.Connectors.Chrono/packages.config
+++ b/src/REstate.Connectors.Chrono/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="6.0.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
   <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
   <package id="REstateClient" version="5.0.1" targetFramework="net461" />
   <package id="REstateClient.Chrono" version="1.1.0" targetFramework="net461" />
