--- a/src/REstate.Connectors.Decorators.Task/REstate.Connectors.Decorators.Task.csproj
+++ b/src/REstate.Connectors.Decorators.Task/REstate.Connectors.Decorators.Task.csproj
@@ -38,12 +38,8 @@
       <HintPath>..\packages\Psibr.Platform.3.1.0\lib\net45\Psibr.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Domain.Core, Version=6.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Domain.Core.6.0.0\lib\net45\REstate.Domain.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="REstate.Platform, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Platform.1.1.0\lib\net461\REstate.Platform.dll</HintPath>
+    <Reference Include="REstate.Domain.Core, Version=7.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Domain.Core.7.1.1\lib\net45\REstate.Domain.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -59,10 +55,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskConnector.cs" />
     <Compile Include="TaskConnectorDecorator.cs" />
+    <Compile Include="TaskConnectorModule.cs" />
     <Compile Include="TaskConnectorOptions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\REstate.Platform\REstate.Platform.csproj">
+      <Project>{6905fc7a-53de-4454-a37b-5d53e4702785}</Project>
+      <Name>REstate.Platform</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
