--- a/src/REstate.Database.SqlServer/REstate.Database.SqlServer.csproj
+++ b/src/REstate.Database.SqlServer/REstate.Database.SqlServer.csproj
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentMigrator, Version=1.6.1.0, Culture=neutral, PublicKeyToken=aacfc7de5acabf05, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentMigrator.1.6.1\lib\40\FluentMigrator.dll</HintPath>
+    <Reference Include="FluentMigrator, Version=1.6.2.0, Culture=neutral, PublicKeyToken=aacfc7de5acabf05, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentMigrator.1.6.2\lib\40\FluentMigrator.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangePkOnChronoTables.cs" />
     <Compile Include="CreateBaselineAuthTables.cs" />
     <Compile Include="CreateBaselineChronoTables.cs" />
     <Compile Include="CreateChronoConsumerServiceAccount.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AddTriggerToInstances.cs" />
     <Compile Include="UpgradeToVersion5.cs" />
+    <Compile Include="Version7.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
