--- a/src/REstate.Platform/REstate.Platform.csproj
+++ b/src/REstate.Platform/REstate.Platform.csproj
@@ -38,8 +38,8 @@
       <HintPath>..\packages\Psibr.Platform.3.1.0\lib\net45\Psibr.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="REstate.Domain.Core, Version=5.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\REstate.Domain.Core.5.0.1.0\lib\net45\REstate.Domain.Core.dll</HintPath>
+    <Reference Include="REstate.Domain.Core, Version=7.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\REstate.Domain.Core.7.1.1\lib\net45\REstate.Domain.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -56,9 +56,12 @@
     <Compile Include="ConnectorFactoryDecorator.cs" />
     <Compile Include="ConnectorRegistrationExtensions.cs" />
     <Compile Include="DecoratingConnectorFactoryResolver.cs" />
+    <Compile Include="FluentIfExtension.cs" />
     <Compile Include="IConnectorDecorator.cs" />
     <Compile Include="IREstateConnectorModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="REstateConnectorsAndDecoratorsModule.cs" />
+    <Compile Include="REstateConnectorsAndDecoratorsModuleExtensions.cs" />
     <Compile Include="REstatePlatformConfiguration.cs" />
     <Compile Include="ServiceCredentials.cs" />
   </ItemGroup>
@@ -66,6 +69,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="REstate.Platform.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
