--- a/src/REstate.Services.ChronoConsumer/packages.config
+++ b/src/REstate.Services.ChronoConsumer/packages.config
@@ -2,21 +2,25 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
   <package id="AutofacSerilogIntegration" version="1.0.12" targetFramework="net461" />
-  <package id="Nancy" version="2.0-Pre1728" targetFramework="net461" />
-  <package id="Nancy.Authentication.Stateless" version="2.0.0-alpha" targetFramework="net461" />
-  <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
-  <package id="Nancy.Owin" version="2.0.0-alpha" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
+  <package id="Nancy" version="2.0-Pre1750" targetFramework="net461" />
+  <package id="Nancy.Authentication.Stateless" version="2.0-Pre1750" targetFramework="net461" />
+  <package id="Nancy.Bootstrappers.Autofac" version="2.0-Pre436" targetFramework="net461" />
+  <package id="Nancy.Owin" version="2.0-Pre1750" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
   <package id="Psibr.Platform.Logging.Serilog" version="1.0.1.0" targetFramework="net45" />
+  <package id="Psibr.Platform.Serialization.NewtonsoftJson" version="1.0.0.0" targetFramework="net461" />
   <package id="REstate.Domain.Chrono" version="1.0.1.0" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="6.0.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
   <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
   <package id="REstateClient" version="5.0.1" targetFramework="net461" />
-  <package id="Serilog" version="1.5.14" targetFramework="net461" />
-  <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net461" />
-  <package id="Serilog.Sinks.Seq" version="1.5.36" targetFramework="net461" />
+  <package id="Serilog" version="2.0.0-rc-602" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="2.0.0-rc-704" targetFramework="net461" />
+  <package id="Serilog.Sinks.Literate" version="2.0.0-rc-25" targetFramework="net461" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.0.0-rc-707" targetFramework="net461" />
+  <package id="Serilog.Sinks.RollingFile" version="2.0.0-rc-703" targetFramework="net461" />
+  <package id="Serilog.Sinks.Seq" version="2.0.0-rc-48" targetFramework="net461" />
   <package id="Topshelf" version="4.0.1" targetFramework="net461" />
   <package id="Topshelf.Serilog" version="4.0.1" targetFramework="net461" />
 </packages>
