--- a/src/REstate.Web.AdminUI/packages.config
+++ b/src/REstate.Web.AdminUI/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net461" />
-  <package id="Nancy" version="2.0-Pre1728" targetFramework="net461" />
-  <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
-  <package id="Nancy.Owin" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy" version="2.0-Pre1750" targetFramework="net461" />
+  <package id="Nancy.Bootstrappers.Autofac" version="2.0-Pre436" targetFramework="net461" />
+  <package id="Nancy.Owin" version="2.0-Pre1750" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
-  <package id="REstate.Domain.Core" version="6.0.0" targetFramework="net461" />
+  <package id="REstate.Domain.Core" version="7.1.1" targetFramework="net461" />
   <package id="REstate.Platform" version="1.1.0" targetFramework="net461" />
 </packages>
