--- a/src/REstate.Web.Chrono/REstate.Web.Chrono.csproj
+++ b/src/REstate.Web.Chrono/REstate.Web.Chrono.csproj
@@ -47,19 +47,19 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Nancy, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nancy.2.0-Pre1728\lib\net45\Nancy.dll</HintPath>
+      <HintPath>..\packages\Nancy.2.0-Pre1750\lib\net45\Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Nancy.Authentication.Stateless, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nancy.Authentication.Stateless.2.0.0-alpha\lib\net45\Nancy.Authentication.Stateless.dll</HintPath>
+      <HintPath>..\packages\Nancy.Authentication.Stateless.2.0-Pre1750\lib\net45\Nancy.Authentication.Stateless.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Nancy.Bootstrappers.Autofac, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nancy.Bootstrappers.Autofac.2.0.0-alpha\lib\net45\Nancy.Bootstrappers.Autofac.dll</HintPath>
+      <HintPath>..\packages\Nancy.Bootstrappers.Autofac.2.0-Pre436\lib\net45\Nancy.Bootstrappers.Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Nancy.Owin, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nancy.Owin.2.0.0-alpha\lib\net45\Nancy.Owin.dll</HintPath>
+      <HintPath>..\packages\Nancy.Owin.2.0-Pre1750\lib\net45\Nancy.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
