--- a/src/REstate.Web.Chrono/packages.config
+++ b/src/REstate.Web.Chrono/packages.config
@@ -4,10 +4,10 @@
   <package id="JWT" version="1.3.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
-  <package id="Nancy" version="2.0-Pre1728" targetFramework="net461" />
-  <package id="Nancy.Authentication.Stateless" version="2.0.0-alpha" targetFramework="net461" />
-  <package id="Nancy.Bootstrappers.Autofac" version="2.0.0-alpha" targetFramework="net461" />
-  <package id="Nancy.Owin" version="2.0.0-alpha" targetFramework="net461" />
+  <package id="Nancy" version="2.0-Pre1750" targetFramework="net461" />
+  <package id="Nancy.Authentication.Stateless" version="2.0-Pre1750" targetFramework="net461" />
+  <package id="Nancy.Bootstrappers.Autofac" version="2.0-Pre436" targetFramework="net461" />
+  <package id="Nancy.Owin" version="2.0-Pre1750" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="OwinJwtAndCookie" version="1.0.8.0" targetFramework="net45" />
   <package id="Psibr.Platform" version="3.1.0" targetFramework="net461" />
